feat: add safe container deletion
